--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -47,7 +47,9 @@
     <div id="vanta-bg" aria-hidden="true"></div>
     <header class="site-header">
       <div class="header-inner">
-        <a href="/" class="logo" title="Переключить тему">⚡ Snappy</a>
+        <a href="/" class="logo" title="Переключить тему"
+          ><img src="favicon.svg" alt="" class="logo-icon" aria-hidden="true" /> Snappy</a
+        >
         <nav>
           <a href="#features">Возможности</a>
           <a href="#examples">Примеры</a>
@@ -315,7 +317,7 @@
     </main>
     <footer class="site-footer">
       <div class="footer-inner">
-        <span class="logo">⚡ Snappy</span>
+        <span class="logo"><img src="favicon.svg" alt="" class="logo-icon" aria-hidden="true" /> Snappy</span>
         <p>Умная обработка текста в Telegram с искусственным интеллектом.</p>
         <a href="https://t.me/sn4ppy_bot" target="_blank" rel="noopener">@sn4ppy_bot</a>
       </div>
