--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -34,11 +34,9 @@
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.24/dist/vanta.fog.min.js"></script>
   </head>
   <body>
-    <div id="vanta-bg" aria-hidden="true"></div>
+    <div id="fog-bg" aria-hidden="true"></div>
     <header class="site-header">
       <div class="header-inner">
         <a href="/" class="logo" title="Переключить тему"
