remove scroll animation

--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -68,35 +68,35 @@
         </section>
 
         <section id="features" class="section">
-          <h2 data-aos="fade-up">🛠️ Что умеет Snappy</h2>
-          <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
+          <h2>🛠️ Что умеет Snappy</h2>
+          <p class="section-lead">
             Один бот для правок, сокращения, расширения и смены тона. Идеально для постов, писем, объявлений и любых
             текстов, где важны точность и тон.
           </p>
           <div class="features-grid">
-            <div class="card" data-aos="fade-up" data-aos-delay="100">
+            <div class="card">
               <span class="card-icon">📝</span>
               <h3>Исправление ошибок</h3>
               <p>Орфография, пунктуация, грамматика и стиль. Смысл и структура сохраняются — только чистая правка.</p>
             </div>
-            <div class="card" data-aos="fade-up" data-aos-delay="150">
+            <div class="card">
               <span class="card-icon">✂️</span>
               <h3>Сокращение</h3>
               <p>
                 Сжатие на 40–50% с сохранением главных мыслей и фактов. Убирает воду и повторы — текст становится ёмким.
               </p>
             </div>
-            <div class="card" data-aos="fade-up" data-aos-delay="200">
+            <div class="card">
               <span class="card-icon">📖</span>
               <h3>Расширение</h3>
               <p>Детализация, примеры и разъяснения. Черновик превращается в развёрнутый текст без потери стиля.</p>
             </div>
-            <div class="card" data-aos="fade-up" data-aos-delay="250">
+            <div class="card">
               <span class="card-icon">👁️</span>
               <h3>Читаемость</h3>
               <p>Короткие предложения, чёткие абзацы, списки. Сложные формулировки упрощаются без потери смысла.</p>
             </div>
-            <div class="card" data-aos="fade-up" data-aos-delay="300">
+            <div class="card">
               <span class="card-icon">😊</span>
               <h3>Эмодзи и форматирование</h3>
               <p>
@@ -104,7 +104,7 @@
                 моноширинный текст и уместные эмодзи. Готово к отправке в чат — копировать не нужно.
               </p>
             </div>
-            <div class="card" data-aos="fade-up" data-aos-delay="350">
+            <div class="card">
               <span class="card-icon">🎭</span>
               <h3>Стили</h3>
               <p>Один черновик — разные тона: деловой, дружеский, нейтральный, продающий или юмористический.</p>
@@ -114,11 +114,11 @@
 
         <section id="examples" class="section">
           <h2 data-aos="fade-up">📝 Примеры: было → стало</h2>
-          <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
+          <p class="section-lead">
             Результат в боте приходит с форматированием Telegram и эмодзи — так же отображается и на сайте ниже.
           </p>
 
-          <div class="example-block" data-aos="fade-up" data-aos-delay="100">
+          <div class="example-block">
             <p class="example-label">Исправление ошибок</p>
             <div class="example-row">
               <div class="example-box example-before">
@@ -139,7 +139,7 @@
             </div>
           </div>
 
-          <div class="example-block" data-aos="fade-up" data-aos-delay="200">
+          <div class="example-block">
             <p class="example-label">Дружеский стиль + эмодзи</p>
             <div class="example-row">
               <div class="example-box example-before">
@@ -157,7 +157,7 @@
             </div>
           </div>
 
-          <div class="example-block" data-aos="fade-up" data-aos-delay="300">
+          <div class="example-block">
             <p class="example-label">Читаемость и структура</p>
             <div class="example-row">
               <div class="example-box example-before">
@@ -181,9 +181,7 @@
 
         <section class="section">
           <h2 data-aos="fade-up">🎭 Готовые стили текста</h2>
-          <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
-            Выберите нужный тон — бот переформулирует текст под заданный стиль за секунды.
-          </p>
+          <p class="section-lead">Выберите нужный тон — бот переформулирует текст под заданный стиль за секунды.</p>
           <ul class="styles-list">
             <li data-aos="fade" data-aos-delay="80"><strong>Деловой</strong> — официально и по делу</li>
             <li data-aos="fade" data-aos-delay="120"><strong>Дружеский</strong> — тепло и на «ты»</li>
@@ -195,11 +193,11 @@
 
         <section id="who" class="section">
           <h2 data-aos="fade-up">👥 Для кого Snappy</h2>
-          <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
+          <p class="section-lead">
             Тем, кто пишет в мессенджерах и соцсетях и хочет тратить меньше времени на правки и упаковку текста.
           </p>
           <div class="features-grid">
-            <div class="card" data-aos="fade-up" data-aos-delay="100">
+            <div class="card">
               <span class="card-icon">📱</span>
               <h3>SMM и контент-менеджеры</h3>
               <p>
@@ -207,14 +205,14 @@
                 сторонние сервисы.
               </p>
             </div>
-            <div class="card" data-aos="fade-up" data-aos-delay="150">
+            <div class="card">
               <span class="card-icon">✉️</span>
               <h3>Работа с письмами и чатами</h3>
               <p>
                 Короткие ответы клиентам, уведомления коллегам, объявления — исправить тон и ошибки прямо в Telegram.
               </p>
             </div>
-            <div class="card" data-aos="fade-up" data-aos-delay="200">
+            <div class="card">
               <span class="card-icon">📄</span>
               <h3>Объявления и описания</h3>
               <p>
@@ -222,7 +220,7 @@
                 стиль.
               </p>
             </div>
-            <div class="card" data-aos="fade-up" data-aos-delay="250">
+            <div class="card">
               <span class="card-icon">🎓</span>
               <h3>Учёба и личное</h3>
               <p>
@@ -235,9 +233,7 @@
 
         <section id="faq" class="section">
           <h2 data-aos="fade-up">❓ Частые вопросы</h2>
-          <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
-            Краткие ответы на то, что чаще всего спрашивают про Snappy.
-          </p>
+          <p class="section-lead">Краткие ответы на то, что чаще всего спрашивают про Snappy.</p>
           <dl class="faq-list">
             <div class="faq-item" data-aos="fade-up" data-aos-delay="80">
               <dt>Snappy бесплатный?</dt>
@@ -260,7 +256,7 @@
                 орфографии и норм. Отдельные действия могут поддерживать и другие языки — проверьте в интерфейсе бота.
               </dd>
             </div>
-            <div class="faq-item" data-aos="fade-up" data-aos-delay="200">
+            <div class="faq-item">
               <dt>Сохраняются ли мои тексты?</dt>
               <dd>
                 Тексты обрабатываются для получения результата и не используются для обучения моделей. Подробности — в
@@ -286,7 +282,7 @@
 
         <section id="start" class="section">
           <h2 data-aos="fade-up">🚀 Как начать</h2>
-          <p class="section-lead" data-aos="fade-up" data-aos-delay="50">
+          <p class="section-lead">
             Подходит для соцсетей, писем, объявлений и любых задач, где важны скорость и качество текста. Быстрее и
             проще, чем править вручную или гонять текст по разным сервисам.
           </p>
