disable scroll restoration

--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -34,6 +34,9 @@
 
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="stylesheet" href="styles.css" />
+    <script>
+      if ("scrollRestoration" in history) history.scrollRestoration = "manual";
+    </script>
   </head>
   <body>
     <div id="fog-bg" aria-hidden="true"></div>
