improve site styles

--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -182,7 +182,7 @@
           </div>
         </section>
 
-        <section class="section">
+        <section id="styles" class="section">
           <h2 data-aos="fade-up">🎭 Готовые стили текста</h2>
           <p class="section-lead">Выберите нужный тон — бот переформулирует текст под заданный стиль за секунды.</p>
           <ul class="styles-list">
@@ -289,12 +289,14 @@
             Подходит для соцсетей, писем, объявлений и любых задач, где важны скорость и качество текста. Быстрее и
             проще, чем править вручную или гонять текст по разным сервисам.
           </p>
-          <ol class="steps" data-aos="fade-up" data-aos-delay="100">
-            <li>Добавьте Snappy в Telegram по ссылке ниже.</li>
-            <li>Отправьте боту любой текст — сообщение, пост или черновик.</li>
-            <li>Выберите действие: исправить, сократить, расширить, изменить стиль и т.д.</li>
-            <li>Получите результат сразу в чате.</li>
-          </ol>
+          <div class="start-card">
+            <ol class="steps" data-aos="fade-up" data-aos-delay="100">
+              <li>Добавьте Snappy в Telegram по ссылке ниже.</li>
+              <li>Отправьте боту любой текст — сообщение, пост или черновик.</li>
+              <li>Выберите действие: исправить, сократить, расширить, изменить стиль и т.д.</li>
+              <li>Получите результат сразу в чате.</li>
+            </ol>
+          </div>
         </section>
 
         <section class="cta-block" data-aos="zoom-in">
