--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -116,7 +116,7 @@
         </section>
 
         <section id="examples" class="section">
-          <h2 data-aos="fade-up">📝 Примеры: было → стало</h2>
+          <h2>📝 Примеры: было → стало</h2>
           <p class="section-lead">
             Результат в боте приходит с форматированием Telegram и эмодзи — так же отображается и на сайте ниже.
           </p>
@@ -183,19 +183,19 @@
         </section>
 
         <section id="styles" class="section">
-          <h2 data-aos="fade-up">🎭 Готовые стили текста</h2>
+          <h2>🎭 Готовые стили текста</h2>
           <p class="section-lead">Выберите нужный тон — бот переформулирует текст под заданный стиль за секунды.</p>
           <ul class="styles-list">
-            <li data-aos="fade" data-aos-delay="80"><strong>Деловой</strong> — официально и по делу</li>
-            <li data-aos="fade" data-aos-delay="120"><strong>Дружеский</strong> — тепло и на «ты»</li>
-            <li data-aos="fade" data-aos-delay="160"><strong>Нейтральный</strong> — объективно и по факту</li>
-            <li data-aos="fade" data-aos-delay="200"><strong>Продающий</strong> — выгоды и призывы к действию</li>
-            <li data-aos="fade" data-aos-delay="240"><strong>Юмористический</strong> — лёгкость и уместные шутки</li>
+            <li><strong>Деловой</strong> — официально и по делу</li>
+            <li><strong>Дружеский</strong> — тепло и на «ты»</li>
+            <li><strong>Нейтральный</strong> — объективно и по факту</li>
+            <li><strong>Продающий</strong> — выгоды и призывы к действию</li>
+            <li><strong>Юмористический</strong> — лёгкость и уместные шутки</li>
           </ul>
         </section>
 
         <section id="who" class="section">
-          <h2 data-aos="fade-up">👥 Для кого Snappy</h2>
+          <h2>👥 Для кого Snappy</h2>
           <p class="section-lead">
             Тем, кто пишет в мессенджерах и соцсетях и хочет тратить меньше времени на правки и упаковку текста.
           </p>
@@ -235,24 +235,24 @@
         </section>
 
         <section id="faq" class="section">
-          <h2 data-aos="fade-up">❓ Частые вопросы</h2>
+          <h2>❓ Частые вопросы</h2>
           <p class="section-lead">Краткие ответы на то, что чаще всего спрашивают про Snappy.</p>
           <dl class="faq-list">
-            <div class="faq-item" data-aos="fade-up" data-aos-delay="80">
+            <div class="faq-item">
               <dt>Snappy бесплатный?</dt>
               <dd>
                 Да. Бот в Telegram бесплатен для использования. Часть возможностей может быть ограничена или расширена
                 за счёт подписки — актуальные условия смотрите в самом боте.
               </dd>
             </div>
-            <div class="faq-item" data-aos="fade-up" data-aos-delay="120">
+            <div class="faq-item">
               <dt>Нужна ли регистрация?</dt>
               <dd>
                 Нет. Достаточно открыть бота в Telegram и начать отправлять текст. Отдельный аккаунт на сайте не
                 требуется.
               </dd>
             </div>
-            <div class="faq-item" data-aos="fade-up" data-aos-delay="160">
+            <div class="faq-item">
               <dt>На каких языках работает бот?</dt>
               <dd>
                 Snappy ориентирован на русский язык: правка, сокращение и смена стиля выполняются с учётом русской
@@ -266,14 +266,14 @@
                 политике конфиденциальности бота (если доступна в Telegram).
               </dd>
             </div>
-            <div class="faq-item" data-aos="fade-up" data-aos-delay="240">
+            <div class="faq-item">
               <dt>Есть ли ограничение по длине текста?</dt>
               <dd>
                 Да, у сообщений в Telegram и у модели есть лимиты. Очень длинные тексты может потребоваться разбить на
                 части. Точные лимиты указаны в боте.
               </dd>
             </div>
-            <div class="faq-item" data-aos="fade-up" data-aos-delay="280">
+            <div class="faq-item">
               <dt>Чем Snappy отличается от других редакторов?</dt>
               <dd>
                 Всё происходит внутри Telegram: не нужно копировать текст на сайт или в приложение. Выбор действия —
@@ -284,13 +284,13 @@
         </section>
 
         <section id="start" class="section">
-          <h2 data-aos="fade-up">🚀 Как начать</h2>
+          <h2>🚀 Как начать</h2>
           <p class="section-lead">
             Подходит для соцсетей, писем, объявлений и любых задач, где важны скорость и качество текста. Быстрее и
             проще, чем править вручную или гонять текст по разным сервисам.
           </p>
           <div class="start-card">
-            <ol class="steps" data-aos="fade-up" data-aos-delay="100">
+            <ol class="steps">
               <li>Добавьте Snappy в Telegram по ссылке ниже.</li>
               <li>Отправьте боту любой текст — сообщение, пост или черновик.</li>
               <li>Выберите действие: исправить, сократить, расширить, изменить стиль и т.д.</li>
@@ -299,7 +299,7 @@
           </div>
         </section>
 
-        <section class="cta-block" data-aos="zoom-in">
+        <section class="cta-block">
           <h2>💬 Попробуйте Snappy</h2>
           <p>Откройте бота в Telegram и обработайте первый текст за минуту.</p>
           <a href="https://t.me/sn4ppy_bot" class="btn btn-primary btn-lg" target="_blank" rel="noopener"
