--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -186,11 +186,11 @@
           <h2>🎭 Готовые стили текста</h2>
           <p class="section-lead">Выберите нужный тон — бот переформулирует текст под заданный стиль за секунды.</p>
           <ul class="styles-list">
-            <li class="card"><strong>Деловой</strong> — официально и по делу</li>
-            <li class="card"><strong>Дружеский</strong> — тепло и на «ты»</li>
-            <li class="card"><strong>Нейтральный</strong> — объективно и по факту</li>
-            <li class="card"><strong>Продающий</strong> — выгоды и призывы к действию</li>
-            <li class="card"><strong>Юмористический</strong> — лёгкость и уместные шутки</li>
+            <li class="card"><strong>💼 Деловой</strong> — официально и по делу</li>
+            <li class="card"><strong>🤝 Дружеский</strong> — тепло и на «ты»</li>
+            <li class="card"><strong>⚖️ Нейтральный</strong> — объективно и по факту</li>
+            <li class="card"><strong>🎯 Продающий</strong> — выгоды и призывы к действию</li>
+            <li class="card"><strong>😄 Юмористический</strong> — лёгкость и уместные шутки</li>
           </ul>
         </section>
 
