--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -124,7 +124,7 @@
           <div class="example-block">
             <p class="example-label">Исправление ошибок</p>
             <div class="example-row">
-              <div class="card example-before">
+              <div class="example-panel example-before">
                 <span class="example-title">Было</span>
                 <p>
                   привет написал тебе вчера насчёт встречи не знаю получилось ли у тебя прочитать давай созвонимся в
@@ -132,7 +132,7 @@
                 </p>
               </div>
               <span class="example-arrow" aria-hidden="true">→</span>
-              <div class="card example-after">
+              <div class="example-panel example-after">
                 <span class="example-title">Стало</span>
                 <p>
                   Привет! Написал тебе вчера насчёт встречи — не знаю, получилось ли у тебя прочитать. Давай созвонимся
@@ -145,12 +145,12 @@
           <div class="example-block">
             <p class="example-label">Дружеский стиль + эмодзи</p>
             <div class="example-row">
-              <div class="card example-before">
+              <div class="example-panel example-before">
                 <span class="example-title">Было</span>
                 <p>Семинар переносится на 15:00. Уведомляю всех участников.</p>
               </div>
               <span class="example-arrow" aria-hidden="true">→</span>
-              <div class="card example-after">
+              <div class="example-panel example-after">
                 <span class="example-title">Стало</span>
                 <p>
                   Эй, друзья! 👋 Семинар переносим на <strong>15:00</strong> — предупреждаю заранее, чтобы все успели.
@@ -163,7 +163,7 @@
           <div class="example-block">
             <p class="example-label">Читаемость и структура</p>
             <div class="example-row">
-              <div class="card example-before">
+              <div class="example-panel example-before">
                 <span class="example-title">Было</span>
                 <p>
                   Мы занимаемся доставкой по городу в течение 2 часов при заказе от 1000 рублей при этом у нас действует
@@ -171,7 +171,7 @@
                 </p>
               </div>
               <span class="example-arrow" aria-hidden="true">→</span>
-              <div class="card example-after">
+              <div class="example-panel example-after">
                 <span class="example-title">Стало</span>
                 <p>
                   Доставка по городу — <strong>до 2 часов</strong> 🚚<br /><br />• При заказе от 1000 ₽<br />•
@@ -185,13 +185,13 @@
         <section id="styles" class="section">
           <h2>🎭 Готовые стили текста</h2>
           <p class="section-lead">Выберите нужный тон — бот переформулирует текст под заданный стиль за секунды.</p>
-          <ul class="styles-list">
-            <li class="card"><strong>💼 Деловой</strong> — официально и по делу</li>
-            <li class="card"><strong>🤝 Дружеский</strong> — тепло и на «ты»</li>
-            <li class="card"><strong>⚖️ Нейтральный</strong> — объективно и по факту</li>
-            <li class="card"><strong>🎯 Продающий</strong> — выгоды и призывы к действию</li>
-            <li class="card"><strong>😄 Юмористический</strong> — лёгкость и уместные шутки</li>
-          </ul>
+          <div class="styles-pills">
+            <span class="pill"><strong>💼 Деловой</strong> — официально и по делу</span>
+            <span class="pill"><strong>🤝 Дружеский</strong> — тепло и на «ты»</span>
+            <span class="pill"><strong>⚖️ Нейтральный</strong> — объективно и по факту</span>
+            <span class="pill"><strong>🎯 Продающий</strong> — выгоды и призывы к действию</span>
+            <span class="pill"><strong>😄 Юмористический</strong> — лёгкость и уместные шутки</span>
+          </div>
         </section>
 
         <section id="who" class="section">
@@ -199,37 +199,45 @@
           <p class="section-lead">
             Тем, кто пишет в мессенджерах и соцсетях и хочет тратить меньше времени на правки и упаковку текста.
           </p>
-          <div class="features-grid">
-            <div class="card">
-              <span class="card-icon">📱</span>
-              <h3>SMM и контент-менеджеры</h3>
-              <p>
-                Посты, сторис, объявления — один черновик и несколько вариантов тона или длины без копирования в
-                сторонние сервисы.
-              </p>
+          <div class="who-list">
+            <div class="who-item">
+              <span class="who-icon">📱</span>
+              <div>
+                <h3>SMM и контент-менеджеры</h3>
+                <p>
+                  Посты, сторис, объявления — один черновик и несколько вариантов тона или длины без копирования в
+                  сторонние сервисы.
+                </p>
+              </div>
             </div>
-            <div class="card">
-              <span class="card-icon">✉️</span>
-              <h3>Работа с письмами и чатами</h3>
-              <p>
-                Короткие ответы клиентам, уведомления коллегам, объявления — исправить тон и ошибки прямо в Telegram.
-              </p>
+            <div class="who-item">
+              <span class="who-icon">✉️</span>
+              <div>
+                <h3>Работа с письмами и чатами</h3>
+                <p>
+                  Короткие ответы клиентам, уведомления коллегам, объявления — исправить тон и ошибки прямо в Telegram.
+                </p>
+              </div>
             </div>
-            <div class="card">
-              <span class="card-icon">📄</span>
-              <h3>Объявления и описания</h3>
-              <p>
-                Текст для Авито, досок объявлений, карточек товаров: сократить воду, добавить структуру, подправить
-                стиль.
-              </p>
+            <div class="who-item">
+              <span class="who-icon">📄</span>
+              <div>
+                <h3>Объявления и описания</h3>
+                <p>
+                  Текст для Авито, досок объявлений, карточек товаров: сократить воду, добавить структуру, подправить
+                  стиль.
+                </p>
+              </div>
             </div>
-            <div class="card">
-              <span class="card-icon">🎓</span>
-              <h3>Учёба и личное</h3>
-              <p>
-                Сообщения преподавателям, резюме, сопроводительные — проверить орфографию и тон, не выходя из
-                мессенджера.
-              </p>
+            <div class="who-item">
+              <span class="who-icon">🎓</span>
+              <div>
+                <h3>Учёба и личное</h3>
+                <p>
+                  Сообщения преподавателям, резюме, сопроводительные — проверить орфографию и тон, не выходя из
+                  мессенджера.
+                </p>
+              </div>
             </div>
           </div>
         </section>
@@ -238,42 +246,42 @@
           <h2>❓ Частые вопросы</h2>
           <p class="section-lead">Краткие ответы на то, что чаще всего спрашивают про Snappy.</p>
           <dl class="faq-list">
-            <div class="card">
+            <div class="faq-item">
               <dt>Snappy бесплатный?</dt>
               <dd>
                 Да. Бот в Telegram бесплатен для использования. Часть возможностей может быть ограничена или расширена
                 за счёт подписки — актуальные условия смотрите в самом боте.
               </dd>
             </div>
-            <div class="card">
+            <div class="faq-item">
               <dt>Нужна ли регистрация?</dt>
               <dd>
                 Нет. Достаточно открыть бота в Telegram и начать отправлять текст. Отдельный аккаунт на сайте не
                 требуется.
               </dd>
             </div>
-            <div class="card">
+            <div class="faq-item">
               <dt>На каких языках работает бот?</dt>
               <dd>
                 Snappy ориентирован на русский язык: правка, сокращение и смена стиля выполняются с учётом русской
                 орфографии и норм. Отдельные действия могут поддерживать и другие языки — проверьте в интерфейсе бота.
               </dd>
             </div>
-            <div class="card">
+            <div class="faq-item">
               <dt>Сохраняются ли мои тексты?</dt>
               <dd>
                 Тексты обрабатываются для получения результата и не используются для обучения моделей. Подробности — в
                 политике конфиденциальности бота (если доступна в Telegram).
               </dd>
             </div>
-            <div class="card">
+            <div class="faq-item">
               <dt>Есть ли ограничение по длине текста?</dt>
               <dd>
                 Да, у сообщений в Telegram и у модели есть лимиты. Очень длинные тексты может потребоваться разбить на
                 части. Точные лимиты указаны в боте.
               </dd>
             </div>
-            <div class="card">
+            <div class="faq-item">
               <dt>Чем Snappy отличается от других редакторов?</dt>
               <dd>
                 Всё происходит внутри Telegram: не нужно копировать текст на сайт или в приложение. Выбор действия —
@@ -289,7 +297,7 @@
             Подходит для соцсетей, писем, объявлений и любых задач, где важны скорость и качество текста. Быстрее и
             проще, чем править вручную или гонять текст по разным сервисам.
           </p>
-          <div class="card">
+          <div class="steps-timeline">
             <ol class="steps">
               <li>Добавьте Snappy в Telegram по ссылке ниже.</li>
               <li>Отправьте боту любой текст — сообщение, пост или черновик.</li>
