--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -186,11 +186,26 @@
           <h2>🎭 Готовые стили текста</h2>
           <p class="section-lead">Выберите нужный тон — бот переформулирует текст под заданный стиль за секунды.</p>
           <div class="styles-pills">
-            <span class="pill"><strong>💼 Деловой</strong> — официально и по делу</span>
-            <span class="pill"><strong>🤝 Дружеский</strong> — тепло и на «ты»</span>
-            <span class="pill"><strong>⚖️ Нейтральный</strong> — объективно и по факту</span>
-            <span class="pill"><strong>🎯 Продающий</strong> — выгоды и призывы к действию</span>
-            <span class="pill"><strong>😄 Юмористический</strong> — лёгкость и уместные шутки</span>
+            <div class="pill">
+              <span class="pill-left">💼 Деловой</span>
+              <span class="pill-right">официально и по делу</span>
+            </div>
+            <div class="pill">
+              <span class="pill-left">🤝 Дружеский</span>
+              <span class="pill-right">тепло и на «ты»</span>
+            </div>
+            <div class="pill">
+              <span class="pill-left">⚖️ Нейтральный</span>
+              <span class="pill-right">объективно и по факту</span>
+            </div>
+            <div class="pill">
+              <span class="pill-left">🎯 Продающий</span>
+              <span class="pill-right">выгоды и призывы к действию</span>
+            </div>
+            <div class="pill">
+              <span class="pill-left">😄 Юмористический</span>
+              <span class="pill-right">лёгкость и уместные шутки</span>
+            </div>
           </div>
         </section>
 
