--- a/packages/snappy-site/index.html
+++ b/packages/snappy-site/index.html
@@ -31,6 +31,7 @@
           <a href="#who">Для кого</a>
           <a href="#faq">Вопросы</a>
           <a href="#start">Как начать</a>
+          <a href="app.html">Личный кабинет</a>
           <a href="https://t.me/sn4ppy_bot" class="nav-cta" target="_blank" rel="noopener"
             ><span class="icon-telegram" aria-hidden="true"></span>Открыть в Telegram</a
           >
