--- a/packages/snappy-site/src/site/index.html
+++ b/packages/snappy-site/src/site/index.html
@@ -12,7 +12,7 @@
       name="keywords"
       content="редактор текста, исправление ошибок, сократить текст, изменить стиль текста, ИИ для текста, бот Telegram, правка текста"
     />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <script>
       if ("scrollRestoration" in history) history.scrollRestoration = "manual";
     </script>
