--- a/packages/snappy-site/src/site/index.html
+++ b/packages/snappy-site/src/site/index.html
@@ -1,17 +1,11 @@
 <!doctype html>
-<html lang="ru" data-theme="light">
+<html lang="{{htmlLang}}" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Snappy — ИИ для текста в Telegram: правка, сокращение, стиль за секунды</title>
-    <meta
-      name="description"
-      content="Исправляйте ошибки, сокращайте и меняйте тон текста за секунды. Snappy — умный бот в Telegram для постов, писем и объявлений. Результат сразу в чате."
-    />
-    <meta
-      name="keywords"
-      content="редактор текста, исправление ошибок, сократить текст, изменить стиль текста, ИИ для текста, бот Telegram, правка текста"
-    />
+    <title>{{title}}</title>
+    <meta name="description" content="{{description}}" />
+    <meta name="keywords" content="{{keywords}}" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <script>
       if ("scrollRestoration" in history) history.scrollRestoration = "manual";
