--- a/packages/snappy-site/src/site/index.html
+++ b/packages/snappy-site/src/site/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="{{description}}" />
     <meta name="keywords" content="{{keywords}}" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet" href="/src/site/styles.css" />
     <script>
       if ("scrollRestoration" in history) history.scrollRestoration = "manual";
